Fix audio service quit timeout logic.

With this change, setting it to 0 is still taken as "tear down asap",
but the default value is "never tear down".

The field trial testing config is updated to not set the
teardown_timeout_s parameters (since the default is what we want
already).

Bug: 920173
Change-Id: Id49a60c7a6ffd231827248431d017755901bd1ee
Tbr: dalecurtis
Reviewed-on: https://chromium-review.googlesource.com/c/1402766
Commit-Queue: Max Morin <maxmorin@chromium.org>
Reviewed-by: Olga Sharonova <olka@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621514}
Former-commit-id: f10ae53e17c31f66b1597f535e4ceeacb820ced0